# bgmachine

./: .gitignore  LICENSE  configure.ac
src/: playbg.py
